<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">01_AndroidTrainingFGL06</string>
    <string name="action_settings">Settings</string>
    <string name="edit_message">Enter a Message</string>
    <string name="button_send">Send</string>
    <string name="title_activity_display_message">My Message with option menu</string>
    <string name="hello_world">Hello world!</string>
    <string name="hello_world_fragment">Hello world Fragmented!</string>
    <string name="action_search">My search</string>
    <string name="title_activity_display_message_activity_for_result">DisplayMessageActivityForResult</string>
    <string name="button_send_for_result">Send for result</string>
    <string name="button_search_web">Search in web</string>    
    <string name="button_add_element_to_list">Add to list</string>
        
    <!-- Fragment Main_list -->
    <string name="button_search_web_from_list">Search all in web from list</string>
    <string name="button_search_web_selected">Search selected in web</string>
    
    <string name="button_remove_from_list">Remove all from list</string>
    <string name="button_remove_selected_from_list">Remove selected from search list</string>
    
    <string name="label_search_web_from_list">Search list - filled from text above</string>
    <string name="element_search_web_from_list_empty">No entries</string>
    
    <string name="message_element_in_list">Element yet in list. Will not be added.</string>

    <!-- About Box -->
    <string name="action_about">About</string>
    <!-- <string name="about">This is our App, please see http://www.example.com. Email support at support@example.com.</string> -->
    <string name="about">Project for tests and tryouts:</string>

    <!-- Version Box -->
    <string name="action_version">Version (TXT)</string>
    <string name="version">History:</string>

    <!-- Version Box - Per WebView -->
    <string name="action_version_html">Version (HTML)</string>
    <string name="version_html">Historie:</string>
    <string name="title_activity_display_webview_activty_for_version">DisplayWebviewActivtyForVersion</string>
    <string name="title_activity_display_search_web">Web - Searchresult</string>
    
    <!-- Web - Suchseite  -->
    <string name="action_print">Print</string>

    <!-- FGL06: Beenden der Applikation -->
    <string name="action_end">End</string>                
</resources>
