<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="de.fgl.tryout.android.training001.MainActivity" >

  <!-- Search, should appear as action button -->
    <item android:id="@+id/action_search"
          android:icon="@drawable/ic_action_search"
          android:title="@string/action_search"
          android:showAsAction="ifRoom" />
    
    <!-- Settings, should always be in the overflow -->
    <item
        android:id="@+id/action_settings"        
        android:orderInCategory="10"
        android:title="@string/action_settings"
        app:showAsAction="never"/>
    
    <!-- Version, should always be in the overflow -->
    <item
        android:id="@+id/action_version_html"
        android:icon="@drawable/ic_action_version_html"
        android:orderInCategory="98"
        android:title="@string/action_version_html"
        app:showAsAction="never"/>
    
      <!-- Version, should always be in the overflow -->
    <item
        android:id="@+id/action_version_txt"
        android:icon="@drawable/ic_action_version"
        android:orderInCategory="99"
        android:title="@string/action_version"
        app:showAsAction="never"/>
    
     <!-- About, should always be in the overflow -->
    <item
        android:id="@+id/action_about"
        android:icon="@drawable/ic_action_about"
        android:orderInCategory="100"
        android:title="@string/action_about"
        app:showAsAction="never"/>
    
    <!-- FGL06: Beenden Link -->
    <item android:id="@+id/action_end"
        android:icon="@drawable/ic_action_end"
        android:orderInCategory="101"
        android:title="@string/action_end"
        app:showAsAction="never"/>


</menu>
