<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="top"
    android:onClick="addElementToSearchList"
    android:orientation="horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="de.fgl.tryout.android.training001.PlaceholderFragmentMain" >

    <EditText
        android:id="@+id/edit_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/edit_message" />

    <Button
        android:id="@+id/button_search_web"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/edit_message"
        android:layout_below="@+id/edit_message"
        android:layout_marginTop="23dp"
        android:onClick="sendMessageToSearchWeb"
        android:text="@string/button_search_web" />

    <Button
        android:id="@+id/button_send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button_search_web"
        android:layout_alignBottom="@+id/button_search_web"
        android:layout_marginLeft="12dp"
        android:layout_toRightOf="@+id/button_search_web"
        android:layout_weight="0"
        android:onClick="sendMessage"
        android:text="@string/button_send" />

    <Button
        android:id="@+id/button_send_for_result"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button_send"
        android:layout_below="@+id/button_send"
        android:onClick="sendMessageForResult"
        android:text="@string/button_send_for_result" />

    <Button
        android:id="@+id/add_search_list"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button_send_for_result"
        android:layout_alignBottom="@+id/button_send_for_result"
        android:layout_alignLeft="@+id/button_search_web"
        android:layout_alignRight="@+id/button_search_web"
        android:layout_below="@+id/button_search_web"
        android:contentDescription="@string/button_add_element_to_list"
        android:onClick="addElementToSearchList"
        android:text="@string/button_add_element_to_list"
        android:textSize="10dp" />

</RelativeLayout>
