<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:scrollbarStyle="insideOverlay"
    android:scrollbars="horizontal"
    tools:context="de.fgl.tryout.android.training001.MainActivity$PlaceholderFragmentList" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:text="@string/label_search_web_from_list"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <ListView
        android:id="@+id/list_search_web"
        android:layout_width="fill_parent"
        android:layout_height="182dp"
        android:choiceMode="multipleChoice"
        android:scrollbarAlwaysDrawVerticalTrack="false"
        android:scrollbarStyle="insideOverlay"
        android:scrollbars="vertical|horizontal|none" >
    </ListView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
		<!--  verberge die Buttons zuerst, mach sie erst sichtbar, wenn Elemente in der Liste sind -->
        <Button
            android:id="@+id/button_search_web_from_list"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="23dp"
            android:visibility="invisible"
            android:clickable="false"
            android:enabled="false"
            android:onClick="sendMessageToSearchWebFromList"
            android:text="@string/button_search_web_from_list" />
		<!--  verberge die Buttons zuerst, mach sie erst sichtbar, wenn Elemente in der Liste sind -->
        <Button
            android:id="@+id/button_remove_from_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="23dp"
            android:visibility="invisible"
            android:clickable="false"
            android:enabled="false"
            android:onClick="removeFromList"
            android:text="@string/button_remove_from_list" />

    </LinearLayout>

    <requestFocus />

</LinearLayout>
